--- a/main.css
+++ b/main.css
@@ -24,3 +24,11 @@ body {
 .section-title {
     font-family: Pacifico, cursive;
 }
+
+.section-title span {
+    color: #e15f41;
+}
+
+#sobre-o-restaurante {
+    background-color: #ffeae6;
+}
